--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script type="text/javascript">
-      window._AMapSecurityConfig = {
-        securityJsCode: 'f7aa41ab3112b5fc450b547c00771fdc',
-      }
-    </script>
+    <!-- 直接引入高德地图API - 去掉async defer属性确保优先加载 -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=f7aa41ab3112b5fc450b547c00771fdc&plugin=AMap.Scale,AMap.ToolBar,AMap.DistrictSearch,AMap.PlaceSearch,AMap.DistrictLayer"></script>
+    <!-- 添加UI库 -->
+    <script type="text/javascript" src="https://webapi.amap.com/ui/1.1/main.js"></script>
   </head>
   <body>
     <div id="app"></div>
